<resources>
    <string name="app_name">NAC01</string>
    <string name="login">Login:</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha...</string>
    <string name="digite_seu_usuario">Digite seu usuário...</string>
    <string name="entrar">Entrar</string>
    <string name="salvar_user_senha">Salvar usuário e senha?</string>
    <string name="credenciais_invalidas">Login ou senha inválidos.</string>
    <string name="escolha_tema">Escolha seu tema preferido:</string>
    <string name="vermelho">Vermelho</string>
    <string name="azu">Azul</string>
    <string name="verde">Verde</string>
    <string name="salvar">Salvar</string>
    <string name="cor_salva">Cor salva com sucesso.</string>
</resources>
